--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build && next export",
+    "start": "next start",
+    "server": "json-server --port 8000 --watch rest_api.json"
   },
   "dependencies": {
     "next": "10.2.0",
@@ -14,6 +15,8 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
+    "json-server": "^0.16.3",
     "typescript": "^4.2.4"
   }
 }
