--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "server": "json-server --port 8000 --watch rest_api.json"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "next": "10.2.0",
@@ -15,8 +14,6 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "json-server": "^0.16.3",
     "typescript": "^4.2.4"
   }
 }
