--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "server": "json-server --port 8000 --watch rest_api.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "json-server": "^0.16.3",
