--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@mverissimoo/emotion-grid": "^1.7.0",
+    "dayjs": "^1.10.4",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
