--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
