--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@types/node": "^15.3.1",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "json-server": "^0.16.3",
