--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "jsxImportSource": "@emotion/react",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
