--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dayjs": "^1.10.7",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -23,6 +25,7 @@
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "@types/react-slick": "^0.23.7",
     "json-server": "^0.17.0",
     "typescript": "^4.5.2"
   },
